--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 <!--home-->
     <section id="banner">
-                        <div class="imagen0"><img src="A-E2.jpg" alt="" class="fotoA-E"></div>
+                        <div class="imagen0"><img src="imgnes/A-E2.jpg" alt="" class="fotoA-E"></div>
  <div class="info1">
       <h2>Hola, soy Alejandro</h2>
       <h1>Diseñador y<br>desarrollador Web</h1>
