--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Portafolio</title> 
-    <link rel="shortcut icon" href="zorrocara.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imgenes/zorrocara.png" type="image/x-icon">
 </head>
 <body>
 <!-- header menu despegable -->
@@ -32,9 +32,9 @@
       <h1>Diseñador y<br>desarrollador Web</h1>
 </div>
 <div class="redes">
-    <div class="circulo1"><img src="linkedin.svg"></div>
-    <div class="circulo2"><img src="instagram.svg"></div>
-    <div class="circulo3"><img src="twitter.svg"></div>
+    <div class="circulo1"><img src="iconos/linkedin.svg"></div>
+    <div class="circulo2"><img src="iconos/instagram.svg"></div>
+    <div class="circulo3"><img src="iconos/twitter.svg"></div>
          </div>
 <div class="acerca"><h2>Acerca de mi</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae nostrum alias<br>delectus quaerat at quod sit. Iusto harum repellendus cupiditate. Id velit architecto <br> repellendus illo repudiandae dolor voluptates tenetur nemo aperiam quidem tempora <br> praesentium ipsa maiores illum, minima quia dolorem, laudantium,<br> libero eius? Excepturi culpa porro possimus voluptatem.</p>
@@ -45,16 +45,16 @@
     <h2>Mis habilidades</h2>
 <div class="habilidades">
         <div class="icono">
-            <div class="imgicono"><img src="mobile.svg" alt=""></div> 
+            <div class="imgicono"><img src="iconos/mobile.svg" alt=""></div> 
                     Mobile app design</div>
         <div class="icono">
-            <div class="imgicono"><img src="motion.svg" alt=""></div>
+            <div class="imgicono"><img src="iconos/motion.svg" alt=""></div>
                     Motion Design</div>
         <div class="icono">
-            <div class="imgicono"><img src="material.svg" alt=""></div>
+            <div class="imgicono"><img src="iconos/material.svg" alt=""></div>
                         Creacion de sistemas de diseño</div>
             <div class="icono">
-                    <div class="imgicono"><img src="web.svg" alt=""></div>
+                    <div class="imgicono"><img src="iconos/web.svg" alt=""></div>
                     Desarrollo web</div>
 
 </div>
@@ -72,21 +72,21 @@
 <!-- PORTAFOLIO-->
 <section id="imgportafolio"><h2>Portafolio</h2>
     <div class="img-p">
-        <div class="imgejemplo"><img src="ejemplo 1.png" alt=""></div>
-        <div class="imgejemplo"><img src="ejemplo 2.png" alt=""></div>
-        <div class="imgejemplo"><img src="ejemplo 3.png" alt=""></div>
+        <div class="imgejemplo"><img src="imgenes/ejemplo 1.png" alt=""></div>
+        <div class="imgejemplo"><img src="imgenes/ejemplo 2.png" alt=""></div>
+        <div class="imgejemplo"><img src="imgenes/ejemplo 3.png" alt=""></div>
     </div>
 </section>
 <!-- CONTACTO -->
 <section id="Contacto"><H2>Contacto</H2>
     <div class="contenedor-contacto">
         <div class="cont1">
-            <div class="phoneC"><img src="phone.svg" alt=""></div>
+            <div class="phoneC"><img src="iconos/phone.svg" alt=""></div>
             <span>Numero Celular</span><p>8138621542</p></div>
 
 
         <div class="cont2">
-            <div class="mailC"><img src="mail 1.svg" alt=""></div>
+            <div class="mailC"><img src="iconos/mail 1.svg" alt=""></div>
             <span>Email</span><p>jeuescobarbernudez@gmail.com</p></div>
     </div>
 </section>
